fixed the scrollbar but need to fix the position #68

--- a/src/frontend/src/app/home-page/popups/profil/match-history/match-history.component.css
+++ b/src/frontend/src/app/home-page/popups/profil/match-history/match-history.component.css
@@ -1,9 +1,3 @@
-/* firefox */
-.scroller {
-  width: 300px;
-  height: 100px;
-}
-
 /* Safari, Chrome, IE */
  ::-webkit-scrollbar {
   width: 10px;
@@ -19,13 +13,15 @@
 
 /* History */
 .history-content {
-  height: 100%;
+  height: 70%;
   width: 100%;
   border-radius: 1em;
   overflow-y: scroll;
   scrollbar-color: #44526F #1a202c;
   scrollbar-width: thin;
   overflow-x: hidden;
+
+  background-color: red;
 }
 
 .history-items {
